--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="portfolio-section clear-fix">
         <div class="container">
-            <div class="portfolio-1"><img src="/profile.jpg" alt=""></div>
+            <div class="portfolio-1"><img src="profile.jpg" alt=""></div>
             <div class="portfolio-2">
                 <h1>About Me</h1>
                 <h2>Chanchal Biswas</h2>
